develop

v0.6.2
  Feature(benlangfeld): Add password support to MUCUser
  Feature(benlangfeld): Add support for invitation elements to MUCUser messages
  Feature(benlangfeld): Add support for MUC invite declines
  Bugfix(benlangfeld): Don't implicitly create an invite node when checking invite status
  Bugfix(benlangfeld): Ensure that form nodes are not duplicated on muc/muc_user presence stanzas

v0.6.1
  Bugfix(benlangfeld): Ensure MUC presence nodes (joining) have a form element on creation

v0.6.0
  Feature(benlangfeld): Very basic MUC and delayed message support
  Bugfix(theozaurus): Disable connection timeout timer if client deliberately disconnects
  Bugfix(mtrudel): Fix Roster#each to return roster_items as per documentation

v0.5.12
  Bugfix(benlangfeld): Allow specifying the connection timeout in DSL setup

v0.5.11
  Feature(benlangfeld): Allow specifying a connection timeout
    * Raise Blather::Stream::ConnectionTimeout if timeout is exceeded
    * Default to 180 seconds

v0.5.10
  Feature(juandebravo): Allow configuring the wire log level
  Bugfix(benlangfeld): Checking connection status before the stream is established

v0.5.9
  Bugfix(benlangfeld): Failed connections now raise a Blather::Stream::ConnectionFailed exception
  Bugfix(crohr): Blather now supports EventMachine 1.0

v0.5.8
  Bugfix(benlangfeld): JIDs now maintain case, but still compare case insensitively
  Bugfix(jmazzi): Development dependencies now resolve correctly on JRuby and Rubinius

v0.5.7
  Bugfix(benlangfeld): Don't install BlueCloth as a development dependency when on JRuby

v0.5.6
  Changes from 0.5.5, this time without a bug when using the namespaced DSL approach

v0.5.5 (yanked)
  Bugfix(benlangfeld/kibs): ActiveSupport was overriding the presence DSL method
  Feature(fyafighter): Adds SSL peer verification to TLS

v0.5.4
  Bugfix(fyafighter): Regression related to earlier refactoring: https://github.com/sprsquish/blather/issues/53