@@ -37,6 +37,7 @@ Gem::Specification.new do |s|
   s.add_dependency "nokogiri", ["~> 1.4.0"]
   s.add_dependency "niceogiri", [">= 0.1.0"]
   s.add_dependency "activesupport", [">= 3.0.7"]
+  s.add_dependency "girl_friday"
 
   s.add_development_dependency "minitest", ["~> 1.7.1"]
   s.add_development_dependency "mocha", ["~> 0.9.12"]
