@@ -7,6 +7,8 @@ RSpec.configure do |config|
   config.mock_with :mocha
   config.filter_run :focus => true
   config.run_all_when_everything_filtered = true
+
+  config.before(:each) { GirlFriday::WorkQueue.immediate! }
 end
 
 def parse_stanza(xml)
